add buy product with api

--- a/app/src/main/res/layout/dialog_buy_product.xml
+++ b/app/src/main/res/layout/dialog_buy_product.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:layout_height="wrap_content"
     android:background="#f6f6f6"
@@ -21,13 +22,22 @@
         android:layout_width="match_parent"
         android:layout_height="35dp">
 
-        <EditText
-            android:inputType="number"
-            style="@style/editText"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layout_input_qty_buy_product"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp" />
+            app:hintEnabled="false"
+            android:layout_height="35dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_qty_popup"
+                android:inputType="number"
+                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="0dp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:padding="8dp"
