--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,6 +54,7 @@
 
                     <com.mikhaellopez.circularimageview.CircularImageView
                         android:id="@+id/profile_image"
+                        android:scaleType="centerCrop"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_marginStart="@dimen/margin_space"
