--- a/app/src/main/res/layout/item_list_cart.xml
+++ b/app/src/main/res/layout/item_list_cart.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="15dp"
-    android:paddingTop="15dp"
-    android:paddingEnd="15dp">
+    android:paddingTop="15dp">
 
     <ImageView
+        android:scaleType="fitCenter"
+        android:layout_marginStart="15dp"
         android:id="@+id/img_cart"
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -16,11 +16,22 @@
         tools:src="@drawable/beras" />
 
     <TextView
+        android:layout_marginStart="15dp"
+        android:id="@+id/label_discount_cart"
+        style="@style/TextMedium"
+        android:layout_width="30dp"
+        android:layout_height="17dp"
+        android:background="@color/colorYellow"
+        android:textAlignment="center"
+        tools:text="10%" />
+
+    <TextView
+        android:layout_marginEnd="15dp"
         android:id="@+id/title_product_cart"
         style="@style/TextRegular"
         android:layout_height="40dp"
         android:layout_toEndOf="@+id/img_cart"
-        android:text="Beras Cianjur assa sasa sasa sa sa sasedfdsfsdfsdfa" />
+        tools:text="Beras Cianjur assa sasa sasa sa sa sasedfdsfsdfsdfa" />
 
     <TextView
         android:id="@+id/price_strikeThrough"
@@ -29,22 +40,23 @@
         android:layout_marginTop="3dp"
         android:layout_marginEnd="5dp"
         android:layout_toEndOf="@+id/img_cart"
-        android:text="Rp10.000"
+        tools:text="Rp10.000"
         android:textSize="11sp" />
 
     <TextView
+        android:id="@+id/price_product_cart"
         style="@style/TextSemiBold"
         android:layout_below="@+id/title_product_cart"
         android:layout_toEndOf="@+id/price_strikeThrough"
-        android:text="Rp5.000"
+        tools:text="Rp5.000"
         android:textSize="14sp" />
 
     <TextView
         android:id="@+id/total_qty_cart"
         style="@style/TextRegular"
-        android:layout_below="@+id/price_strikeThrough"
+        android:layout_below="@+id/price_product_cart"
         android:layout_toEndOf="@+id/img_cart"
-        android:text="Jumlah: 1 Kg" />
+        tools:text="Jumlah: 1 Kg" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_delete"
@@ -53,6 +65,7 @@
         android:layout_below="@+id/total_qty_cart"
         android:layout_alignParentEnd="true"
         app:cardCornerRadius="13dp"
+        android:layout_marginEnd="15dp"
         app:cardElevation="15dp">
 
         <RelativeLayout
