add checkout UI & fix problem

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorYellow">#ffdd00</color>
     <color name="colorRed">#df3470</color>
+    <color name="alabaster">#FAFAFA</color>
 </resources>
