--- a/app/src/main/res/layout/item_list_cart.xml
+++ b/app/src/main/res/layout/item_list_cart.xml
@@ -69,6 +69,7 @@
         app:cardElevation="15dp">
 
         <RelativeLayout
+            android:id="@+id/delete_product_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp">
