--- a/app/src/main/res/drawable/btn_gradient.xml
+++ b/app/src/main/res/drawable/btn_gradient.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <corners android:radius="5dp" />
+    <corners android:radius="20dp" />
     <gradient
-        android:angle="45"
-        android:startColor="#fb6679"
-        android:endColor="#ed92f8"/>
+        android:angle="135"
+        android:startColor="#fb7661"
+        android:endColor="#df3470"/>
 </shape>
