--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="colorYellow">#ffdd00</color>
     <color name="colorRed">#df3470</color>
     <color name="alabaster">#FAFAFA</color>
+    <color name="oslo_gray">#95989A</color>
 </resources>
