--- a/app/src/main/res/layout/item_list_cart.xml
+++ b/app/src/main/res/layout/item_list_cart.xml
@@ -7,7 +7,7 @@
     android:paddingTop="15dp">
 
     <ImageView
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:layout_marginStart="15dp"
         android:id="@+id/img_cart"
         android:layout_width="80dp"
