--- a/app/src/main/res/drawable/edit_text_white.xml
+++ b/app/src/main/res/drawable/edit_text_white.xml
@@ -2,7 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle">
-
+    <stroke
+        android:width="0.5dp"
+        android:color="@color/colorGray"/>
     <corners android:radius="5dp" />
     <solid
         android:color="@color/colorWhite" />
