--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -35,6 +35,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
+        android:layout_below="@+id/appbar_checkout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/alabaster">
@@ -170,7 +171,7 @@
                 style="@style/TextSemiBold"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="@dimen/margin_space"
-                android:text="TAMBAHKAN CATATAN (BOLEH KOSONG)" />
+                android:text="METODE PEMBAYARAN" />
 
             <RadioGroup
                 android:layout_width="match_parent"
