--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -222,12 +222,14 @@
                     android:text="Diskon / Potongan\nHarga"/>
 
                 <TextView
+                    android:id="@+id/qty_checkout"
                     android:layout_alignParentEnd="true"
                     android:textColor="@color/colorWhite"
                     style="@style/TextRegular"
                     android:text="1"/>
 
                 <TextView
+                    android:id="@+id/price_piece"
                     android:layout_below="@+id/tv_total_qty"
                     android:layout_alignParentEnd="true"
                     android:textColor="@color/colorWhite"
